# avr-door-controller

./: .travis.yml  README.md
client/: AVRDoorCtrl.py  AVRDoorsDB.py  DB.py  Dockerfile  avr-doors-admin.py  avr-doors-db.sql
client/ubus/: __init__.py  ubus.py
daemon/: .gitignore  CMakeLists.txt  avr-door-controller-daemon.acl  avr-door-controller-daemon.c  avr-door-controller-daemon.h  avr-door-controller-daemon.rc  avr-door-controller-methods.c  avr-door-controller-uart-transport.c
electronic/: .gitignore  avr-door-controller-cache.lib  avr-door-controller.kicad_pcb  avr-door-controller.pro  avr-door-controller.sch  fp-lib-table  modules.dcm  modules.lib
electronic/Modules.pretty/: JRC-21F.kicad_mod  MT3608.kicad_mod  XM1584.kicad_mod
electronic/PPTC.pretty/: Bourns_PPTC_Style_1.kicad_mod  Bourns_PPTC_Style_2.kicad_mod
firmware/: .gitignore  Makefile  acl.c  acl.h  acl_otp.c  button.c  button.h  completion.h  config.mk  ctrl-cmd-types.h  ctrl-cmd.c  ctrl-cmd.h  ctrl-transport.h  door-controller.c  door-controller.h  eeprom-types.h  eeprom-v1.c  eeprom.c  eeprom.h  errno.h  event-queue.c  event-queue.h  external-irq.c  external-irq.h  gpio.c  gpio.h  hotp.c  hotp.h  i2c.c  i2c.h  main.c  rtc-ds3231.c  rtc.c  rtc.h  sha1.c  sha1.h  sleep.c  sleep.h  timer.c  timer.h  (+11 more)
firmware/boards/: arduino_nano_v2.c  arduino_nano_v2.h  arduino_nano_v3.c  arduino_nano_v3.h
firmware/mcu/: atmega168.c  atmega168.h  atmega328.c  atmega328.h  atmega328p.h
